<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_standard">

    <fragment
        android:id="@+id/nav_standard"
        android:name="com.joshowen.scrum_poker.ui.fragments.standard.CardFragment"
        android:label="@string/menu_standard"
        tools:layout="@layout/fragment_card" >
        <argument
            android:name="deckType"
            app:argType="com.joshowen.scrum_poker.types.enums.DeckType"
            android:defaultValue="STANDARD" />
    </fragment>

    <fragment
        android:id="@+id/nav_fibonacci"
        android:name="com.joshowen.scrum_poker.ui.fragments.standard.CardFragment"
        android:label="@string/menu_fibonacci"
        tools:layout="@layout/fragment_card" >
        <argument
            android:name="deckType"
            app:argType="com.joshowen.scrum_poker.types.enums.DeckType"
            android:defaultValue="FIBONACCI" />
    </fragment>

    <fragment
        android:id="@+id/nav_hours"
        android:name="com.joshowen.scrum_poker.ui.fragments.standard.CardFragment"
        android:label="@string/menu_hours"
        tools:layout="@layout/fragment_card" >
        <argument
            android:name="deckType"
            app:argType="com.joshowen.scrum_poker.types.enums.DeckType"
            android:defaultValue="HOURS" />
    </fragment>


    <fragment
        android:id="@+id/nav_risk"
        android:name="com.joshowen.scrum_poker.ui.fragments.standard.CardFragment"
        android:label="@string/menu_risk"
        tools:layout="@layout/fragment_card" >
        <argument
            android:name="deckType"
            app:argType="com.joshowen.scrum_poker.types.enums.DeckType"
            android:defaultValue="RISK" />
    </fragment>


    <fragment
        android:id="@+id/nav_online"
        tools:layout="@layout/fragment_online_home"
        android:name="com.joshowen.scrum_poker.ui.fragments.collaboration.onlinehome.OnlineHomeFragment"
        android:label="@string/menu_online_collaboration" >

        <action
            android:id="@+id/action_Online_to_createLobby"
            app:destination="@id/nav_create_lobby" />
        <action
            android:id="@+id/action_Online_to_collaboration"
            app:destination="@id/nav_collaboration" />

    </fragment>


    <fragment
        android:id="@+id/nav_create_lobby"
        android:name="com.joshowen.scrum_poker.ui.fragments.collaboration.createlobby.CreateLobbyFragment"
        android:label="@string/create_lobby_page_title"
        tools:layout="@layout/fragment_create_lobby" >

        <action
            android:id="@+id/action_lobby_to_collaboration"
            app:destination="@id/nav_collaboration" />

    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.joshowen.scrum_poker.ui.fragments.settings.SettingsFragment"
        tools:layout="@layout/fragment_settings"
        android:label="@string/menu_settings" />
    <fragment
        android:id="@+id/nav_collaboration"
        tools:layout="@layout/fragment_collaboration"
        android:name="com.joshowen.scrum_poker.ui.fragments.collaboration.collaboration.CollaborationFragment"
        android:label="@string/menu_online_collaboration" />


</navigation>